--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -221,12 +221,20 @@ The speckle contrast $\beta$ is governed by the number of independent modes $M$ 
 If the measurement is performed over a finite amount of time the number of temporal degrees of freedom is
 \begin{equation}
 M_t=\frac{\left(\int_{-\infty}^{\infty} P(t)\diff t\right)^2}{\int_{-\infty}^{\infty} K(t) \left|\mu(t)\right|^2\diff t}
+\label{eq:modes}
 \end{equation}
 with $P(t)$ the integration window weighting function and $K(t)$ its autocorrelation \cite{goodman2007}. If the integration windows is set by the integration time $T$ of the detector, $P(t)$ is a rectangular function with the width $T$ and
-\begin{equation}
-M_t,rect = \frac{T}{2} \left[\int_{0}^{T} \left( 1-\frac{t}{T}\right) \left|\mu(t)\right|^2 \diff t \right]^{-1} .
-\end{equation}
-If the Integration time can be considered as infinite and instead $P(t)$ is the convolution of an Gaussian excitation pulse with FWHM of $\tau_p=2\sigma\sqrt{2\ln2}$ and unit area with an exponential decay with lifetime $\tau_d$ \cite{butz2015},
+\begin{align}
+M_t,rect =T \left[\int_{-\infty}^{\infty} \Lambda\left(\frac{t}{T}\right) \left|\mu(t)\right|^2 \diff t \right]^{-1} .\\
+\text{with  }\Lambda(x) = \begin{cases} 
+ 1-\left|x\right|& \textit{if }|x|<1\\
+0 & \textit{otherwise}\\ 
+\end{cases}
+\label{eq:modesapprox}
+\end{align}
+Considering the case of a long integration time, $T\gg\tau$, this can be approximated as $M\approx\frac{T}{\tau}$. For a short integration time,  $T\ll\tau$, the number of temporal modes $M$ approaches unity.
+
+If the Integration time can be considered as infinite and instead $P(t)$ is a Gaussian excitation pulse with FWHM of $\tau_p=2\sigma\sqrt{2\ln2}$ and unit area convoluted with an exponential decay with lifetime $\tau_d$ \cite{butz2015},
 \begin{align}
 P(t)&=\frac{1}{\sigma\sqrt{2\pi}} \int_0^{\infty} e^{-\frac{t^{\prime}}{\tau_d}} 
 e^{-\frac{(t-t^{\prime})^2}{2\sigma^2}}\diff t^{\prime}
@@ -236,28 +244,22 @@ e^{-\frac{(t-t^{\prime})^2}{2\sigma^2}}\diff t^{\prime}
 -\frac{\sigma}{\sqrt{2}\tau_p}
 	\right] ,
 	\end{align}
-	with the complementary error function $\erfc=\frac{2}{\sqrt{\pi}}\int_x^\infty e^{-z^2}\diff z$.
-	If the pulse length is long in comparison the to the pulse length,
-	
-	
-	
-	
-	
-	\begin{align}
-K(t)&= \sqrt{\frac{2{\ln 2}}{\pi}}\frac{1}{ \tau} e^{-\left(\sqrt{2\ln 2}\frac{t}{\tau}\right)^2}
+	with the complementary error function $\erfc=\frac{2}{\sqrt{\pi}}\int_x^\infty e^{-z^2}\diff z$ an approximation can be made if the pulse length is long in comparison the to coherence time,
+\begin{align}
+K(t)&\approx \sqrt{\frac{2{\ln 2}}{\pi}}\frac{1}{ \tau} e^{-\left(\sqrt{2\ln 2}\frac{t}{\tau}\right)^2} .
 \end{align}
-the number of degrees of freedom is
+The number of degrees of freedom in this approximation is
 \begin{align}
 M_t,gauss&=\left[\int_{-\infty}^{\infty} K(t) \left|\mu(t)\right|^2\diff t\right]^{-1}.
+\label{eq:modesapprox2}
 \end{align}
-For a Lorentzian spectrum (see \fref{eq:docdecay}), this evaluates to
-\begin{equation}
-	Inhalt...
-\end{equation} 
+For a Lorentzian spectrum (see \fref{eq:docdecay}), the numerical solution of \fref{eq:modes} and the approximations introduced in \fref{eq:modesapprox} and \fref{eq:modesapprox2} is shown in \fref{fig:modes}.
+
+
 
 The experimentally indistinguishable fluorescence energies $K_\alpha,1$ and $K_\alpha,2$ (as well as  $K_\beta$ if no filter is used for suppression) give additional independent modes $M_E$
 
-As the used X-ray detectors are polarization insensitive and X-ray fluorescence is unpolarized, there are 2 independent polarization modes giving $M_P = 2$  
+As the used X-ray detectors are polarization insensitive and X-ray fluorescence is unpolarized, there are two independent polarization modes giving $M_P = 2$  
 
 
 Path differences longer than the coherence length give additional modes $M_S$, therefore the speckle visibility will be reduced for large samples:
@@ -268,7 +270,8 @@ If the speckle pattern is not spatially resolved by the detector because its res
 
 
 
-As good approximation, the total number of modes can be considered the product of those modes numbers (in reality, the mode numbers are not completely independent, see \fref{chap:simulation} for simulations of the contrast under those limiting factors)
+As an approximation, the total number of modes can be considered the product of those modes different numbers discussed above, even though in reality, the mode numbers are not completely independent.
+Therefore, in \fref{chap:simulation}  simulations under different conditions with experimentally feasible  parameters will be performed.
 %- SNR
 %will use Peak/stdev bg definition
 
