--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -236,30 +236,32 @@ Considering the case of a long integration time, $T\gg\tau$, this can be approxi
 
 If the Integration time can be considered as infinite and instead $P(t)$ is a Gaussian excitation pulse with FWHM of $\tau_p=2\sigma\sqrt{2\ln2}$ and unit area convoluted with an exponential decay with lifetime $\tau_d$ \cite{butz2015},
 \begin{align}
-P(t)&=\frac{1}{\sigma\sqrt{2\pi}} \int_0^{\infty} e^{-\frac{t^{\prime}}{\tau_d}} 
+P(t)&=\frac{1}{\tau_d\sigma\sqrt{2\pi}} \int_0^{\infty} e^{-\frac{t^{\prime}}{\tau_d}} 
 e^{-\frac{(t-t^{\prime})^2}{2\sigma^2}}\diff t^{\prime}
-=\frac{1}{2}e^{-\frac{t}{\tau_d}+\frac{\sigma^2}{2\tau^2}}
+=\frac{1}{2\tau_d}e^{-\frac{t}{\tau_d}+\frac{\sigma^2}{2\tau_d^2}}
 \erfc\left[
+\frac{\sigma}{\sqrt{2}\tau_d}
 -\frac{t}{\sqrt{2}\sigma}
--\frac{\sigma}{\sqrt{2}\tau_p}
 	\right] ,
+	\label{eq:pfull}
 	\end{align}
-	with the complementary error function $\erfc=\frac{2}{\sqrt{\pi}}\int_x^\infty e^{-z^2}\diff z$ an approximation can be made if the pulse length is long in comparison the to coherence time,
+	with the complementary error function $\erfc=\frac{2}{\sqrt{\pi}}\int_x^\infty e^{-z^2}\diff z$ an approximation can be made if the pulse length is long in comparison the to coherence time, dropping the exponential decay from $P(t)$ and simplifying its autocorrelation to
 \begin{align}
-K(t)&\approx \sqrt{\frac{2{\ln 2}}{\pi}}\frac{1}{ \tau} e^{-\left(\sqrt{2\ln 2}\frac{t}{\tau}\right)^2} .
+K(t)&\approx \sqrt{\frac{2{\ln 2}}{\pi}}\frac{1}{ \tau_p} e^{-\left(\sqrt{2\ln 2}\frac{t}{\tau_p}\right)^2} .
 \end{align}
 The number of degrees of freedom in this approximation is
 \begin{align}
 M_t,gauss&=\left[\int_{-\infty}^{\infty} K(t) \left|\mu(t)\right|^2\diff t\right]^{-1}.
 \label{eq:modesapprox2}
 \end{align}
-For a Lorentzian spectrum (see \fref{eq:docdecay}), the numerical solution of \fref{eq:modes} and the approximations introduced in \fref{eq:modesapprox} and \fref{eq:modesapprox2} is shown in \fref{fig:modes}.
+For a Lorentzian spectrum (see \fref{eq:docdecay}), the numerical solution of \fref{eq:modes} and the approximations introduced in \fref{eq:modesapprox} and \fref{eq:modesapprox2} is shown in \fref{fig:modes} 
+\footnote{To numerically evaluate \fref{eq:pfull} and integrals involving it, the introduction of the scaled error function $\text{erfcx}(x)=e^{x^2} \text{erfc}(x)$ and switching between using $erfc$ and an sufficient approximation for $erfcx$ depending on the parameters is necessary to avoid under- or overflow of the numerical representation of either the exponential or the error function term.}
 
 
 
 The experimentally indistinguishable fluorescence energies $K_\alpha,1$ and $K_\alpha,2$ (as well as  $K_\beta$ if no filter is used for suppression) give additional independent modes $M_E$
 
-As the used X-ray detectors are polarization insensitive and X-ray fluorescence is unpolarized, there are two independent polarization modes giving $M_P = 2$  
+As the used X-ray detectors are polarization insensitive and X-ray fluorescence is unpolarized and the incoherent field can be separated into two polarization modes, which are pairwise orthogonal with $\vec{k}$ and therefore change slightly for each atom and detector position. For small source dimensions, this change is negligible,  giving $M_P \approx 2$. 
 
 
 Path differences longer than the coherence length give additional modes $M_S$, therefore the speckle visibility will be reduced for large samples:
