--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -951,6 +951,22 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   type   = {phdthesis},
 }
 
+@Article{ren2007,
+  author   = {Ren, C. and MacKenzie, A. R.},
+  journal  = {Atmospheric Science Letters},
+  title    = {Closed-form approximations to the error and complementary error functions and their applications in atmospheric science},
+  year     = {2007},
+  number   = {3},
+  pages    = {70-73},
+  volume   = {8},
+  abstract = {Abstract The error function, as well as related functions, occurs in theoretical aspects of many parts of atmospheric science. This note presents a closed-form approximation for the error, complementary error, and scaled complementary error functions, with maximum relative errors within 0.8\%. Unlike other approximate solutions, this single equation gives answers within the stated accuracy for real variable x ∈ [0∞). The approximation is very useful in solving atmospheric science problems by providing analytical solutions. Examples of the utility of the approximation are: the computation of cirrus cloud physics inside a general circulation model, the cumulative distribution functions of normal and log-normal distributions, and the recurrence period for risk assessment. Copyright © 2007 Royal Meteorological Society},
+  doi      = {https://doi.org/10.1002/asl.154},
+  eprint   = {https://rmets.onlinelibrary.wiley.com/doi/pdf/10.1002/asl.154},
+  groups   = {msc},
+  keywords = {error function, complementary error function, scaled complementary error function, normal distribution, log-normal distribution, cumulative distribution function, recurrence interval},
+  url      = {https://rmets.onlinelibrary.wiley.com/doi/abs/10.1002/asl.154},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
