--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -129,6 +129,7 @@
 
 \DeclareMathOperator{\erf}{erf}
 \DeclareMathOperator{\erfc}{erfc}
+\DeclareMathOperator{\erfcx}{erfcx}
 \DeclareMathOperator{\Var}{Var}
 %%pygments%
 \usepackage{fancyvrb}
