--- a/Tex/simulation.tex
+++ b/Tex/simulation.tex
@@ -14,15 +14,32 @@ Ultimately, the results of these simulations were used the determine the feasibi
 In an infinite coherence time, stationary sources approximation, the simulation of the speckle pattern can be performed time independently the superposition of scaler electrical fields emitted with random phases. The simulation of the intensity at multiple discrete points can be performed in parallel using GPU acceleration, resulting in a simple and fast to evaluate model.
 
 
+
+- Reconstruction shape
+- Dependence in Nimages, Dependence on Npairs, dependence on modes, random orientations
+
+
+
+
+
 \subsection{Reconstruction}
 
 
 \subsection{Single Sphere}
+radial symmetrie
+
 \subsection{Multiple Spheres}
+
+
 \subsection{Crystal}
+
+
+\subsection{Superlattice}
+
 \section{Time dependent Simulations}
 
 Each of the $N$ atoms is assigned an emitting time $t_{n}$ chosen according to the excitation pulse shape and its position. Starting from this emitting time, the atom emits an exponential decaying field with a decay time chosen to match the lifetime. 
+
 
 
 For each discrete pixel on the simulated detector, for each atom the distance $d_n$, the arrival time $t'_n=t_n+d_n/c$ of each atom's initial radiance, and its time independent complex field $E_n=\frac{1}{d} e^{ikd_n+\phi_n}$ with initial random phase $phi$ is calculated.
