--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -980,6 +980,14 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   publisher = {Taylor & Francis},
 }
 
+@Misc{psana,
+  author       = {Mikhail S. Dubrovin and Paul Christopher O'Grady},
+  howpublished = {\url{https://github.com/lcls-psana/ImgAlgos}},
+  title        = {{PSANA}},
+  year         = {2017},
+  groups       = {msc},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
