--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%   DEFINITIONEN   %%%%%%%%%%%%%%%
 %\pdfminorversion=5 
-\documentclass[11pt,a4paper,twoside]{book}
+\documentclass[12pt,a4paper,twoside]{book}
 
 %Packages
 \usepackage[utf8]{inputenc}
@@ -301,7 +301,7 @@
 \fancyhead[RO]{\sc\nouppercase\rightmark} 
 \fancyhead[LE]{\sc\nouppercase\leftmark}
 \cfoot{\thepage}
-\renewcommand{\headheight}{14pt}
+\setlength{\headheight}{14pt}
 \onehalfspacing
 
 \include{introduction}
